@@ -345,6 +345,8 @@ Document:
 
 what goes in AC_CONFIG_AUX_DIR
 
+TEXINFO_TEX
+
 SUBDIR entry must be direct subdir of this dir
 
 C++ -vs- yacc/lex
