@@ -25,7 +25,7 @@ NOTCYGNUS	  && $(MAKEINFO) `echo $< | sed 's,.*/,,'`
 CYGNUS	$(MAKEINFO) -I $(srcdir) $<
 
 .texi.dvi:
-	TEXINPUTS=$(srcdir):$$TEXINPUTS \
+	TEXINPUTS=@TEXINFODIR@:$$TEXINPUTS \
 ## Must set MAKEINFO like this so that version.texi will be found even
 ## if it is in srcdir.
 	  MAKEINFO='$(MAKEINFO) -I $(srcdir)' $(TEXI2DVI) $<
@@ -58,7 +58,10 @@ NOTCYGNUS	  && $(MAKEINFO) `echo $< | sed 's,.*/,,'`
 CYGNUS	$(MAKEINFO) $<
 
 .texinfo.dvi:
-	TEXINPUTS=$(srcdir):$$TEXINPUTS $(TEXI2DVI) $<
+	TEXINPUTS=@TEXINFODIR@:$$TEXINPUTS \
+## Must set MAKEINFO like this so that version.texi will be found even
+## if it is in srcdir.
+	  MAKEINFO='$(MAKEINFO) -I $(srcdir)' $(TEXI2DVI) $<
 
 ## The way to make PostScript, for those who want it.
 DVIPS = dvips
