@@ -1,4 +1,14 @@
+Sat Mar 22 00:06:00 1997  Tom Tromey  <tromey@cygnus.com>
+
+	* texinfos.am (.texi.dvi): Look in @TEXINFODIR@ for texinfo.tex.
+	(.texinfo.dvi): Likewise.
+
+	* automake.in (handle_texinfo): TEXINFO_TEX variable can set
+	location of texinfo.tex.
+
 Fri Mar 21 10:22:51 1997  Tom Tromey  <tromey@cygnus.com>
+
+	* texinfos.am (.texinfo.dvi): Mirror .texi.dvi.
 
 	* ansi2knr.c, ansi2knr.1: New versions from L. Peter Deutsch.
 
